--- a/styles/style.css
+++ b/styles/style.css
@@ -217,5 +217,5 @@ nav ul li:hover {
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #0d1117;
-    background-image: url("./imgs/BG.png");
+    background-image: url("../imgs/BG.png");
 }
