--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,19 @@
     --color-down: #3a974c;
 }
 
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 nav-links{
     position: absolute;
     top: 50%;
