--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,9 @@
   content: "";
   clear: both;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: auto;
+  padding: 5px;
+  width: 50%;
 }
 
 nav-links{
