--- a/styles/style.css
+++ b/styles/style.css
@@ -15,29 +15,38 @@
 }
 
 .column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
+    max-width: 800px;
 }
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  margin: auto;
-  padding: 5px;
-  width: 50%;
-  display: flex;
-  align-items: center;
+.column-large {
+    flex: 2;
+}
+
+.column-small {
+    flex: 1;
+}
+
+.column img {
+    max-width: 100%;
+    height: auto;
+    display: block; 
+    margin: 0 auto; 
+}
+
+.row {
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
 }
 
 nav-links{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-left: auto;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
     width: 400px;
     height: 80px;
 }
@@ -45,19 +54,21 @@ nav-links{
 nav {
     background-color: var(--color-quaternary);
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 10px 20px;
+    width: 100%;
 }
 
 nav h1 {
     margin: 0;
     color: var(--color-primary);
+    margin-right: auto;
 }
 
 nav ul {
     list-style-type: none;
-    margin: 0;
+    margin-left: 0 auto;
     padding: 0;
     display: flex;
 }
@@ -83,7 +94,7 @@ nav ul li:hover {
 
 #about {
     width: 60%;
-    margin: 50px auto; 
+    margin: 30px auto; 
     padding: 20px;
     background-color: var(--color-quinary);
     border: 2px solid var(--color-secondary);
@@ -101,7 +112,7 @@ nav ul li:hover {
 
 #education {
     width: 50%;
-    margin: 50px auto; 
+    margin: 30px auto; 
     padding: 20px;
     background-color: var(--color-quinary);
     border: 2px solid var(--color-secondary);
@@ -119,7 +130,7 @@ nav ul li:hover {
 
 #experience {
     width: 70%;
-    margin: 50px auto; 
+    margin: 30px auto; 
     padding: 20px;
     background-color: var(--color-quinary);
     border: 2px solid var(--color-secondary);
@@ -187,19 +198,51 @@ nav ul li:hover {
 }
 
 .GitHub{
-    height: 50px;
-    width: 350px;
-    font-size: 27px;
+    height: auto;
+    width: 80%;
+    max-width: 350px;
+    font-size: 2vw;
     font-family: inherit;
     color: var(--color-primary);
     background-color: var(--color-tertiary);
     border: 2px solid var(--color-tertiary);
     border-radius: 10px;
+    margin: 0 auto;
+    padding: 10px;
+    display: block;
+    text-align: center;
 }
 
 .GitHub:hover{
     background-color: var(--color-down);
     border: 2px solid var(--color-primary);
+}
+
+.skills-content img {
+    width: 80%;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+}
+
+@media (max-width: 768px) {
+    .GitHub {
+        font-size: 4vw;
+        width: 90%;
+    }
+    .skills-content img {
+        width: 90%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .GitHub {
+        font-size: 1.5vw;
+    }
+    .skills-content img {
+        width: 70%;
+    }
 }
 
 .contact-content {
