--- a/styles/style.css
+++ b/styles/style.css
@@ -172,6 +172,14 @@ nav ul li:hover {
     margin: 0 auto;
 }
 
+.apps {
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    grid-gap: 20px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 #projects h2 {
     color: var(--color-primary);
 }
